crates/bijux-domain-fastq/tests/contracts/snapshots/contracts__stage_contract_snapshots__stage_contract__fastq_correct.snap
---
source: crates/bijux-domain-fastq/tests/contracts/stage_contract_snapshots.rs
expression: json
---
{
  "inputs": {
    "kind": "PairedEnd"
  },
  "metrics": {
    "classes": [
      "Integrity",
      "QualityShift"
    ],
    "invariants": [
      "reads_out == reads_in",
      "bases_out <= bases_in",
      "mean_q_after >= mean_q_before (warn)",
      "counts are non-negative"
    ],
    "notes": "Correct should preserve reads while improving quality."
  },
  "outputs": {
    "emits_fastq": true,
    "kind": "PairedEnd"
  },
  "retention": {
    "definition": "reads_out == reads_in; bases_out <= bases_in",
    "may_drop": [],
    "may_drop_reads": false,
    "must_preserve_pairing": true,
    "preserves": [
      "reads",
      "pairs",
      "bases",
      "pairing_metadata"
    ],
    "units": "reads,bases"
  },
  "schema_version": "bijux.stage_contract.v1",
  "stage_id": "fastq.correct",
  "tool_ids": [
    "rcorrector",
    "spades",
    "bayeshammer",
    "lighter",
    "musket"
  ]
}
