crates/bijux-domain-fastq/tests/contracts/snapshots/contracts__stage_contract_snapshots__stage_contract__fastq_filter.snap
---
source: crates/bijux-domain-fastq/tests/contracts/stage_contract_snapshots.rs
expression: json
---
{
  "inputs": {
    "kind": "SingleEnd"
  },
  "metrics": {
    "classes": [
      "Integrity",
      "Retention",
      "QualityShift"
    ],
    "invariants": [
      "reads_out + reads_dropped == reads_in",
      "reads_removed_by_* <= reads_dropped",
      "mean_q_after >= mean_q_before (warn)",
      "counts are non-negative"
    ],
    "notes": "Filter drops reads and should improve quality."
  },
  "outputs": {
    "emits_fastq": true,
    "kind": "SingleEnd"
  },
  "retention": {
    "definition": "reads_out / reads_in; bases_out / bases_in",
    "may_drop": [
      "reads",
      "bases"
    ],
    "may_drop_reads": true,
    "must_preserve_pairing": true,
    "preserves": [
      "read_order",
      "pairing_metadata"
    ],
    "units": "reads,bases"
  },
  "schema_version": "bijux.stage_contract.v1",
  "stage_id": "fastq.filter",
  "tool_ids": [
    "prinseq",
    "seqkit",
    "fastp"
  ]
}
