crates/bijux-domain-fastq/tests/contracts/snapshots/contracts__stage_contract_snapshots__stage_contract__fastq_merge.snap
---
source: crates/bijux-domain-fastq/tests/contracts/stage_contract_snapshots.rs
expression: json
---
{
  "inputs": {
    "kind": "PairedEnd"
  },
  "metrics": {
    "classes": [
      "Integrity",
      "Retention"
    ],
    "invariants": [
      "reads_merged + reads_unmerged <= min(reads_r1, reads_r2)",
      "merge_rate in [0, 1]",
      "counts are non-negative"
    ],
    "notes": "Merge produces merged/unmerged reads from pairs."
  },
  "outputs": {
    "emits_fastq": true,
    "kind": "Merged"
  },
  "retention": {
    "definition": "reads_merged + reads_unmerged <= min(reads_r1, reads_r2)",
    "may_drop": [
      "reads",
      "pairs",
      "bases"
    ],
    "may_drop_reads": true,
    "must_preserve_pairing": false,
    "preserves": [
      "pairing_metadata"
    ],
    "units": "reads,pairs,bases"
  },
  "schema_version": "bijux.stage_contract.v1",
  "stage_id": "fastq.merge",
  "tool_ids": [
    "pear",
    "vsearch",
    "bbmerge",
    "flash2"
  ]
}
