crates/bijux-domain-fastq/tests/contracts/snapshots/contracts__stage_contract_snapshots__stage_contract__fastq_preprocess.snap
---
source: crates/bijux-domain-fastq/tests/contracts/stage_contract_snapshots.rs
expression: json
---
{
  "inputs": {
    "kind": "PairedEnd"
  },
  "metrics": {},
  "outputs": {
    "emits_fastq": true,
    "kind": "PairedEnd"
  },
  "retention": {
    "definition": "reads_out / reads_in; bases_out / bases_in",
    "may_drop": [
      "reads",
      "pairs",
      "bases"
    ],
    "may_drop_reads": true,
    "must_preserve_pairing": true,
    "preserves": [
      "pairing_metadata"
    ],
    "units": "reads,bases"
  },
  "schema_version": "bijux.stage_contract.v1",
  "stage_id": "fastq.preprocess",
  "tool_ids": [
    "planner"
  ]
}
