crates/bijux-domain-fastq/tests/contracts/snapshots/contracts__stage_contract_snapshots__stage_contract__fastq_validate_pre.snap
---
source: crates/bijux-domain-fastq/tests/contracts/stage_contract_snapshots.rs
expression: json
---
{
  "inputs": {
    "kind": "SingleEnd"
  },
  "metrics": {
    "classes": [
      "Integrity"
    ],
    "invariants": [
      "reads_valid + reads_invalid == reads_total",
      "mean_q in [0, 45]",
      "counts are non-negative"
    ],
    "notes": "Validation reports counts; no data is modified."
  },
  "outputs": {
    "emits_fastq": false,
    "kind": "StatsOnly"
  },
  "retention": {
    "definition": "reads_out == reads_in; bases_out == bases_in",
    "may_drop": [],
    "may_drop_reads": false,
    "must_preserve_pairing": true,
    "preserves": [
      "reads",
      "pairs",
      "bases"
    ],
    "units": "reads,bases"
  },
  "schema_version": "bijux.stage_contract.v1",
  "stage_id": "fastq.validate_pre",
  "tool_ids": [
    "seqtk",
    "fastqc",
    "fastqvalidator",
    "fastqvalidator_official",
    "fqtools"
  ]
}
